Esqueleto Primer Parcial.

--- a/PrimerParcial/Esqueleto/views/index.html
+++ b/PrimerParcial/Esqueleto/views/index.html
@@ -30,6 +30,10 @@
                 <input type="text" id="nombreTxt" placeholder="Ingrese nombre..." class="sinError"><br>
                 <span>Apellido</span><br>
                 <input type="text" id="apellidoTxt" placeholder="Ingrese apellido..." class="sinError"><br>
+                <span>Fecha</span><br>
+                <input type="date" id="fechaTxt" class="sinError"><br>
+                <span>Teléfono</span><br>
+                <input type="text" id="telefonoTxt" placeholder="Ingrese teléfono..." class="sinError"><br>
                 <input type="button" value="Guardar" id="btnGuardar"><br>
             </form>
         </section>
